# ReasonOS

./: .gitignore  Makefile  README.md  build.zig  build.zig.zon  limine.cfg  qemu-log.txt  rust-toolchain.toml
configs/x86_64/: reason-os.json
kernel/: cpu.zig  lib.zig  log.zig  main.zig
kernel/arch/: arch.zig  cpu.zig
kernel/arch/x86_64/: cpu.zig  gdt.zig  idt.zig  interrupt_handlers.S  load_gdt.S  load_gdt.s
kernel/utils/: lock.zig  log.zig  utils.zig
reason/: Cargo.toml  Makefile  build.rs  kernel
reason/.cargo/: config.toml  kernel.ld  x86_64-reason_os.json
reason/src/: boot.rs  main.rs  panic.rs  tests.rs
reason/src/acpi/: mod.rs  rsdp.rs
reason/src/arch/: io.rs  mod.rs
reason/src/arch/x86_64/: cpu.rs  gdt.asm  gdt.rs  idt.rs  interrupt.asm  interrupt.rs  mod.rs  paging.rs  stacktrace.rs
reason/src/data_structures/: linked_list.rs  mod.rs
reason/src/drivers/: framebuffer.rs  io.rs  mod.rs  serial.rs
reason/src/memory/: address.rs  bitmap_allocator.rs  heap.rs  mod.rs  pmm.rs  vmm.rs
reason/src/misc/: colored.rs  elf.rs  log.rs  mod.rs  qemu.rs  utils.rs
