[package]
name = "reason"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
limine = "0.1.12"
nostd_color = "0.1.0"
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
walkdir = "2"
nasm-rs = "0.2"
